fix(gateway): CORS配置改为可配置，修复生产域名HTTPS访问403
Chrome 73+ 对同源 POST 请求也会发送 Origin 头，原 CORS 白名单
仅允许 localhost/127.0.0.1，导致 https://mrb.mreasonchan.cn 的
请求被 CorsWebFilter 拦截返回 403 Forbidden。

- CorsConfig 改为从 cors.allowed-origins 配置读取允许的来源
- mrb-gateway-prod.yml 示例新增生产域名配置